Add a package.json file to install javascript dependencies for building. Also, allow the installation of js tools locally. Add some resources to ignore in the .gitignore file.

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 .Python
 .sass-cache
 .vagrant
+.direnv
+.envrc
 
 /bin
 /include
@@ -22,6 +24,8 @@
 /isso/js/embed.dev.js
 /isso/js/count.min.js
 /isso/js/count.dev.js
+
+/node_modules
 
 /docs/_build
 /docs/_static/css/site.css
